Add(Procotol): Beginning of the specification, with multiple sections:
Headers and payloads
Concatenation of multiple requests
Type of requests / responses
Details of REQ_PKG and REQ_FILE

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ pages:
     - Packages: Package.md
     - Infrastructure: Infrastructure.md
     - Installer: Installer.md
+    - MPM Protocol: Protocol.md
 theme: null
 theme_dir: theme
 repo_url: https://github.com/Morphux/Developer-Documentation
